Homepage frontend css

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,25 @@
 // Specific CSS for your home-page
+
+body { 
+  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 1.00), rgba(117, 19, 93, 0.0)), url('background_garden.jpg'); 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+h1.headline {
+  font-size: 59px;
+  padding: 0 50px;
+}
+
+h2.subhead {
+  font-size: 20px;
+}
+
+.home {
+  padding-top: 100px;
+  text-align: center;
+}
