--- a/app/views/gardens/index.html.erb
+++ b/app/views/gardens/index.html.erb
@@ -1,5 +1,7 @@
-<ul>
-  <% @gardens.each do |garden| %>
-  <li><%= garden.name %>, <%= garden.address %>, <%= garden.price %>€ //  <%= garden.description %></li>
-  <% end %>
-</ul>
+<div class="index">
+  <ul>
+    <% @gardens.each do |garden| %>
+      <li><%= garden.name %>, <%= garden.address %>, <%= garden.price %>€ //  <%= garden.description %></li>
+    <% end %>
+  </ul>
+</div>
