Rename _card to _garden for Rails @gardens render

--- a/app/views/gardens/index.html.erb
+++ b/app/views/gardens/index.html.erb
@@ -1,5 +1,9 @@
-<ul>
-  <% @gardens.each do |garden| %>
-  <li><%= garden.name %>, <%= garden.address %>, <%= garden.price %>€ //  <%= garden.description %></li>
-  <% end %>
-</ul>
+<div class="gardens-index">
+  <nav></nav>
+  <div class="gardens-headline">
+    <h1>select your garden</h1>
+  </div>
+  <div class="gardens">
+    <%= render @gardens %>
+  </div>
+</div>
