--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,6 +3,6 @@
   </br>
   <h2 class="subhead"> Find your safe spot</h2>
   <p>
-    <%= link_to "Explore", href="#", class: "btn btn-primary btn-lg call-to-action" %>
+    <%= link_to "Explore", gardens_path, class: "btn btn-primary btn-lg call-to-action" %>
   </p>
 </div>
