change background_image to external url

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,7 +2,7 @@
   height: 100vh;
   padding-top: 100px;
   text-align: center;
-  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 1.00), rgba(117, 19, 93, 0.0)), url('background_garden.jpg'); 
+  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 1.00), rgba(117, 19, 93, 0.0)), url('https://www.palheironatureestate.com/media/widgetkit/gardens-slide-02-9aa4f8926f5bcf8f9d51629252742ed4.jpg'); 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
