--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,3 +1,9 @@
 .call-to-action {
-  margin-top: 40px;
+  margin-top: 100px;
+  background-color: $purple;
+  border: 1px solid $purple;
+  &:hover {
+    background-color: $purple-hover;
+    border: 1px solid $purple-hover;
+  }
 }
