--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -35,16 +35,17 @@
   display: flex;
   flex-direction: column;
   align-self: flex-end;
-  position: absolute;
+  position: absolute; right: 0;
   padding-bottom: 20px;
+  padding-right: 25px;
   justify-content: flex-end;
 }
 
 .card-garden-top-infos-details {
   border: solid;
   display: flex;
-  height: 60px;
-  width: 60px;
+  height: 50px;
+  width: 70px;
   padding: 10px;
   margin: 10px;
   border-color: white;
