--- a/app/views/gardens/index.html.erb
+++ b/app/views/gardens/index.html.erb
@@ -10,7 +10,7 @@
 
 <% garden = @gardens.sample %>
 <%= cl_image_tag garden.photo.key, height: 300, width: 400, crop: :fill %>
-
+<!--
 
 <% @gardens.each do |garden| %>
 
@@ -35,6 +35,6 @@
   </div>
 </div>
 
-<% end %>
+<% end %> -->
 
 
