--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -3,3 +3,14 @@
 
 <p><%= @garden.address %></p>
 <p><%= @garden.description %></p>
+
+<%= link_to gardens_path, class: "arrow-left" do %>
+<i class="fas fa-arrow-left"></i>
+<% end %>
+
+<% if user_signed_in? %>
+<%= link_to  "Book this garden?", garden_bookings_path %>
+<% else %>
+<%= link_to "sign in to book this garden",  new_user_session_path %>
+<% end %>
+<%= button_to  "Book now", garden_bookings_path %>
