fixed the landing page auth. problem, added some icons to map pop-up

--- a/app/views/gardens/_info_window.html.erb
+++ b/app/views/gardens/_info_window.html.erb
@@ -1,3 +1,4 @@
-<h2><%= garden.name %></h2>
-<p><%= garden.address %></p>
-<p><%= garden.price %></p>
+<h5><%= garden.name %></h5>
+
+<p><i class="fas fa-map"></i> <%= garden.address %></p>
+<p><i class="fas fa-tag"></i> <%= garden.price %>€</p>
