re-added navbar, fixed photos check, some validations

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,3 +1,4 @@
+  <%= render "shared/navbar" %>
 <h1><%= @garden.name %></h1>
 <p><%= @booking.start_date %> until <%= @booking.end_date %></p>
 <h2>User: <%= @user.email %></h2>
