--- a/app/views/gardens/index.html.erb
+++ b/app/views/gardens/index.html.erb
@@ -1,5 +1,6 @@
 
 <div class="gardens-index">
+  <%= render "shared/navbar" %>
   <nav></nav>
   <div class="gardens-headline">
     <h1>select your garden</h1>
