--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,10 +1,14 @@
 
 <%= render "shared/navbar" %>
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <h1><%= @garden.name %></h1>
-      <p><%= @booking.start_date %> until <%= @booking.end_date %></p>
+<div class="container mt-4">
+<div class="row mx-auto">
+  <h4>Booking confirmed</h4>
+</div>
+  <div class="row mx-auto border">
+    <div class="col-sm-auto">
+      <h2><%= @garden.name %></h2>
+      <br>
+      <h4><i class="fas fa-calendar-alt"></i>  <%= @booking.start_date %> until <%= @booking.end_date %></h4>
       <h4><i class="fas fa-user"></i> <%= @user.email %></h4>
       <h4><i class="fas fa-user-tie"></i> <%= @host.email %></h4>
     </div>
