--- a/app/assets/stylesheets/components/_bookings.scss
+++ b/app/assets/stylesheets/components/_bookings.scss
@@ -35,8 +35,10 @@
 
 .btn {
   margin-top: 50px;
-  background-color: #3B1CFF;
   border-radius: 15px;
-  border-color: #3B1CFF;
   font-size: 12px;
+}
+
+.show-btn {
+  color: white;
 }
