--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -19,7 +19,7 @@
         <%= f.input :start_date %>
         <br>
         <%= f.input :end_date %>
-        <%= f.submit class: 'btn btn-primary'%>
+        <%= f.submit class: 'btn btn-primary call-to-action'%>
         <% end %>
     </div>
     </div>
