--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,8 +1,9 @@
-.container {
-  max-width: 700px;
+.show-wrapper {
+  background-color: $black;
 }
 
-.container-show {
+.container {
+  max-width: 700px;
   background-color: $black;
   height: 100vh;
   color: white;
