--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -18,9 +18,6 @@
   color: $black;
 }
 
-.card-garden-top {
-}
-
 .card-garden-top > img {
   max-width: 100%;
   flex-shrink: 0;
@@ -80,11 +77,13 @@
 
 .btn {
   margin-top: 20px;
-  margin-left: 30px;
   margin-bottom: 30px;
   color: white;
-  background-color: #3B1CFF;
   border-radius: 15px;
-  border-color: #3B1CFF;
   font-size: 12px;
+}
+
+.a {
+  color: red;
+  
 }
