Fixes for booking show

--- a/app/assets/stylesheets/components/_links.scss
+++ b/app/assets/stylesheets/components/_links.scss
@@ -4,3 +4,11 @@
     color: $purple-hover;
   }
 }
+
+.arrow-left {
+  color: $purple;
+  text-decoration: none;
+  &:hover {
+    color: $purple-hover;
+  }
+}
