navbar adapted and booking show colors changed

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,3 +1,11 @@
+.confirmation-wrapper {
+ background-color: $black;
+ color: white;
+ height: 100vh;
+ padding-top: 100px;
+}
+
+
 .container {
   max-width: 700px;
 }
@@ -85,5 +93,5 @@
 
 .a {
   color: red;
-  
+
 }
