--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,7 +1,11 @@
 <%= render "shared/navbar" %>
+<div class="confirmation-wrapper">
 <div class="container mt-4">
 <div class="row mx-auto">
   <h4>Booking confirmed</h4>
+  <br>
+  <br>
+  <br>
 </div>
   <div class="row mx-auto border">
     <div class="col-sm-auto">
@@ -12,4 +16,5 @@
       <h4><i class="fas fa-user-tie"></i> <%= @host.email %></h4>
     </div>
   </div>
+</div>
 </div>
