--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,10 +1,33 @@
 // Import your components CSS files here.
 @import "alert";
-@import "avatar";
-@import "navbar";
-@import "button";
-@import "card";
-@import "gardens";
-@import "links";
-@import "map";
-@import "bookings";
+@import "header";
+@import "form";
+@import "info";
+@import "footer";
+
+body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: smaller;
+}
+
+.border-color {
+  border: 1px solid #a4b7c1;
+}
+// p { 
+//   display: block;
+//   margin-block-start: 1em;
+//   margin-block-end: 1em;
+//   margin-inline-start: 0px;
+//   margin-inline-end: 0px;
+//   font-size: smaller;
+// }
+
+h2 {
+    display: block;
+    margin-block-start: 1.33em;
+    margin-block-end: 1.33em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    color: #678898;
+    font-size: medium;
+}
