--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,8 +1,8 @@
-  .form {
+  .box {
     border-radius: 15px;
     background-color: #fff;
     margin: auto;
     padding: 2rem;
-    color: #3e515b;
+    // color: #3e515b;
   }
   
