--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -3,7 +3,7 @@
     height: 1rem;
     border-bottom: 1px solid #a4b7c1;
     display: flex;
-    align-items: center;
+    align-items: left;
     justify-content: space-between;
     background-color: #fff;
 }
