--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,5 +1,5 @@
 // Import your components CSS files here.
-@import "alert";
+@import "response";
 @import "header";
 @import "form";
 @import "info";
