--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,17 +1,21 @@
-<div class="border-bottom">
+<div class="border-bottom mb-3">
   <div class="container justify-content-between align-items-center">
     <%= render 'shared/header' %>
   </div>
 </div>
 <div class="container justify-content-around align-items-center">
   <div class="row justify-content-center">
-    <div class="col-sm col-lg-8 border p-3 form" >
-      <h2><%= User.data[:title] %></h2>
-      <%= render 'shared/form' %>
+    <div class="col-sm col-lg-8 p-3 mb-3" >
+      <div class="p-3 border box">
+        <h2><%= User.data[:title] %></h2>
+        <%= render 'shared/form' %>
+      </div>
     </div>
-    <div class="col-sm col-lg-4 hidden-sm">
-      <h4 class="p-3"><%= User.data[:info_title] %></h4>
-      <p class="p-3"><%= User.data[:info_text] %></p>
+    <div style ="align-self: center;" class="col-sm col-lg-4 hidden-sm p-3 mb-3">
+      <div class="p-3 border box">
+        <h5 class="p-3"><%= User.data[:info_title] %></h5>
+        <p class="p-3"><%= User.data[:info_text] %></p>
+      </div>
     </div>
   </div>
 </div>
